<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".yeniKisi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yenikisiad"

            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/yenikisiadedittext"
            android:textColor="@android:color/black"
            android:id="@+id/yenikisi_isim_edittext"
            android:textStyle="italic" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/yenikisicinsiyet"
            style="@style/radiogroup">

            <RadioButton
                style="@style/radiobtn"
                android:text="@string/erkek" />

            <RadioButton
                style="@style/radiobtn"
                android:text="@string/kadin" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/yenikisicalismadurumu"
            style="@style/radiogroup">

            <RadioButton
                style="@style/radiobtn"
                android:text="@string/calisiyor" />

            <RadioButton
                style="@style/radiobtn"
                android:text="@string/calismiyor" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/yenikisi_ekle_btn"
        android:text="@string/yenikisiKayıt"
        android:textSize="20dp" />

</LinearLayout>